@@ -1,3 +1,9 @@
+2008-08-22  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c: 
+	* generic/tclExecute.c: Set special errocodes: COROUTINE_BUSY,
+	COROUTINE_CANT_YIELD, COROUTINE_ILLEGAL_YIELD.
+
 2008-08-22  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.6a2 TAGGED FOR RELEASE ***
